# RGBD-Reconstruction

./: CMakeLists.txt  README.md
output/: octmap.bt  pcdMapping_final.ply  surfelMapping_mesh.ply  surfelMapping_surfel.ply
src/: octomapMapping.cpp  pcdMapping.cpp  surfelMapping.cpp
